--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -38,6 +38,10 @@ jobs:
         Rscript -e "install.packages('glue', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('jsonlite', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('Rtools', repos='http://cran.rstudio.com/')"
+        Rscript -e "install.packages('curl', repos='http://cran.rstudio.com/')"
+        Rscript -e "install.packages('openssl', repos='http://cran.rstudio.com/')"
+        Rscript -e "install.packages('stringi', repos='http://cran.rstudio.com/')"
+        Rscript -e "install.packages('xml2', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('rvest', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('reshape2', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('data.table', repos='http://cran.rstudio.com/')"
