--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -34,6 +34,7 @@ jobs:
         Rscript -e "install.packages('readr', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('purr', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('stringr', repos='http://cran.rstudio.com/')"
+        Rscript -e "install.packages('lubridate', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('zoo', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('glue', repos='http://cran.rstudio.com/')"
         Rscript -e "install.packages('jsonlite', repos='http://cran.rstudio.com/')"
