--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -25,31 +25,20 @@ jobs:
         r-version: '4.3.1'
 
     # Step 3: Install required R packages
-    - name: Install R packages
-      run: |
-        Rscript -e "install.packages('DBI', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('RMySQL', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('dplyr', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('tidyr', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('readr', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('purr', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('stringr', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('lubridate', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('zoo', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('glue', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('jsonlite', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('Rtools', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('curl', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('openssl', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('stringi', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('xml2', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('rvest', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('reshape2', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('data.table', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('xgboost', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('fastDummies', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('Matrix', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('glmnet', repos='http://cran.rstudio.com/')"
+    - name: Install packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            any::tidyverse 
+            any::DBI
+            any::RMySQL
+            any::rvest
+            any::reshape2
+            any::data.table
+            any::xgboost
+            any::fastDummies
+            any::Matrix
+            any::glmnet
         
     # Step 4: Run the R script
     - name: Run R script
