--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -9,37 +9,32 @@ on:
     - cron: "0 8 * * *"
 
 jobs:
-  run-script:
+  import-data:
     runs-on: ubuntu-latest
-
     steps:
-    # Step 1: Check out the repository
-    - name: Check out repository
-      uses: actions/checkout@v3
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
 
-    # Step 2: Set up R environment
-    - name: Set up R
-      uses: r-lib/actions/setup-r@v2
-      with:
-        r-version: '4.3.0'
+      - name: Install packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            any::DBI
+            any::RMySQL
+            any::tidyverse
+            any::zoo
+            any::glue
+            any::jsonlite
+            any::rvest
+            any::reshape2
+            any::data.table
+            any::xgboost
+            any::fastDummies
+            any::Matrix
+            any::glmnet
 
-    # Step 3: Install required R packages
-    - name: Install R packages
-      run: |
-        Rscript -e "install.packages('DBI', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('RMySQL', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('tidyverse', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('zoo', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('glue', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('jsonlite', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('rvest', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('reshape2', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('data.table', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('xgboost', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('fastDummies', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('Matrix', repos='http://cran.rstudio.com/')"
-        Rscript -e "install.packages('glmnet', repos='http://cran.rstudio.com/')"
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-    # Step 4: Run the R script
-    - name: Run R script
-      run: Rscript _data_updates.R
+      - name: Import data
+        run: Rscript -e 'source("_data_updates.R")'
