--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -11,6 +11,12 @@ on:
 jobs:
   import-data:
     runs-on: ubuntu-latest
+
+    env:
+      DB_DATABASE: test_db
+      DB_USER: root
+      DB_PASSWORD: root
+      
     steps:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
@@ -36,12 +42,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Set up environment variables
+      - name: Start MySQL
         run: |
-          echo "MYSQL_HOST=${{ secrets.MYSQL_HOST }}" >> $GITHUB_ENV
-          echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" >> $GITHUB_ENV
-          echo "MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}" >> $GITHUB_ENV
-          echo "MYSQL_DB=${{ secrets.MYSQL_DB }}" >> $GITHUB_ENV
+          sudo /etc/init.d/mysql start
 
       - name: Import data
         run: Rscript -e 'source("_data_updates.R")'
