--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -11,11 +11,6 @@ on:
 jobs:
   import-data:
     runs-on: ubuntu-latest
-
-    env:
-      DB_DATABASE: test_db
-      DB_USER: root
-      DB_PASSWORD: root
       
     steps:
       - name: Set up R
@@ -42,10 +37,5 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Start MySQL
-        run: |
-          sudo /etc/init.d/mysql start
-          sudo mysql --user=root --password=root
-
       - name: Import data
-        run: Rscript -e 'source("_data_updates.R")'
+        run: Rscript -e 'source("_data_updates_github.R")'
