--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -39,3 +39,10 @@ jobs:
 
       - name: Import data
         run: Rscript -e 'source("_data_updates_github.R")'
+        
+      - name: Commit Results
+        run: |
+          git config --global user.name "hockeyzk-data-github-actions[bot]"
+          git config --global user.email "hockeyzk-data-github-actions@users.noreply.github.com"
+          git add pbp_24_25.rds
+          git push origin
