--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -45,4 +45,5 @@ jobs:
           git config --global user.name "hockeyzk-data-github-actions[bot]"
           git config --global user.email "hockeyzk-data-github-actions@users.noreply.github.com"
           git add pbp_24_25.rds
-          git push origin
+          git commit -m 'Data updated' || echo "No changes to commit"
+          git push origin || echo "No changes to commit"
