--- a/.github/workflows/run_data_updates.yml
+++ b/.github/workflows/run_data_updates.yml
@@ -8,6 +8,9 @@ on:
   schedule:
     - cron: "0 8 * * *"
 
+permissions:
+  contents: write
+  
 jobs:
   import-data:
     runs-on: ubuntu-latest
@@ -36,6 +39,8 @@ jobs:
 
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Import data
         run: Rscript -e 'source("_data_updates_github.R")'
